css/style.css
body {
	margin: 0;
	font-family: 'helvetica neue', helvetica, arial sans;
}

/*****************
 *      NAV      *
 *****************/

.page-name {
	font-size: 2.5em;
	font-weight: normal;
	margin: 0;
}
.nav-right {
	margin: 10px auto;
}
.nav-list-item {
	display: inline;
	padding: 0 4% 0 0;
}
ul {
	padding: 0;
}
li {
	list-style-type: none;
}
a {
	color: #000000;
	text-decoration: none;
}

/******************
 *     BANNER     *
 ******************/

.banner {
	position: relative;
}
.banner-img {
	width: 100%;
}
.banner-text {
	color: #FFF;
	font-size: 1.3em;
	left: 5%;
	line-height: 1.25;
	margin: 0 auto;
	position: absolute;
	top: 5%;
}

/*********************
 *  CONTENT SECTION  *
 *********************/

.content { 
	margin: 20px 0 40px 0;
	position: relative;
	text-align: center;
}
h2 {
	font-weight: normal;
	margin: 0;
}
.thumbnail {
	display: inline-block;
	position: relative;
}
.thumbnail-img {
	width: 100%;
}
.thumbnail-text, 
.thumbnail-text-2 {
	background: rgba(0,0,0, 0.55);
	color: #FFF;
	left: 2%;
	margin: auto;
	padding: 42.5% 23%;
	position: absolute;
	top: 2%;
}
.thumbnail-text-2 {
	padding: 37% 21.5%;
}

/***************
 *  NEWS FEED  *
 ***************/

.news-feed {
	margin: 40px auto;
}
.feed-img {
	clear: both;
	float: left;
	position: relative;
}
.feed-right {
	overflow: hidden; 
}

/************
 *  FOOTER  *
 ************/

.footer {
	background-color: #414141;
}
.center {
	text-align: center;
}
.sub-menu {
	font-size: 0.9em;
	padding: 5% 0;
	text-align: center;
}
.sub-menu-name, 
.sub-menu-item a {
	color: #FFF;
	font-size: 1.2em;
	font-weight: normal;
	line-height: 1.7em;
}
.sub-menu-name {
	font-size: 1.4em;
	margin: 16px auto 0;
	width: 40%;
}
.sub-menu-item {
	margin: 8px auto 0;
	width: 40%;
}

/*********************
 *  UTILITY CLASSES  *
 *********************/

/* CLEARFIX */
.cf:after,
.cf:before {
	content: '';
	display: table;
}
.cf:after {
	clear: both;
}
.cf {
	zoom: 1;
}

/* CENTER CONTENT BLOCKS */
.center-block {
	display: block;
	margin-left: auto;
	margin-right: auto;
}


/****  BREAKPOINT RULES  ****/

/****************************
 *   SMALL SCREEN COLUMNS   *
 ****************************/

.container {
	clear: both;
	margin: 0 auto;
	padding: 0 3%;
}

.col-sm-12 {
	width: 100%
}

/****************************
 *   LARGE SCREEN COLUMNS   *
 ****************************/

@media screen and (min-width: 40.5em) {
	/*   NAV BAR   */
	.nav-left {
		float: left;
		margin: 20px 0;
	}
	.nav-links {
		display: block!important;
		height: auto!important;
		overflow: visible!important;
		padding-bottom: 0;
	}
	.nav-right {
		float: right!important;
		margin: 40px 0 0 0;
	}
	.nav-right:last-child {
		margin: 0 -15px 0 0;
	}
	.nav-list-item {
		display: block;
		float: left;
		padding: 0;
		position: relative;
	}
	.nav-list-item a {
		display: block;
		padding: 40px 15px 15px;
		position: relative;
	}

	/* 	BANNER 	*/
	.banner-text {
		font-size: 2.65em;
		left: 12%;
		top: 11%;
	}

	/*  NEWS FEED  */
	.feed-img {
		left: 8%;
	}
	.feed-right  {
		float: right;
	}

	/*  FOOTER  */ 	
	.footer-menu {
		margin-left: 5%;
	}
	.sub-menu {
		display: inline-block;
		text-align: left;
	}
	.sub-menu-name,
	.sub-menu-item {
		margin: 0 auto;
		width: 100%;
	}

	/* CONTAINER FOR COLUMNS */
	.container {
		padding: 0 10%;
	}
	
	/*  COLUMNS  */

	/* one-twelth */
	.col-lg-1 {
		width: 8.2%;
	}
	/* one-sixth */
	.col-lg-2 {
		width: 16.4%;
	}
	/* quarter */
	.col-lg-3 {
		width: 24.0%;
	}
	/* one-third */
	.col-lg-4 {
		width: 32.0%;
	}
	.col-lg-5 {
		width: 40.6%;
	}
	/* half */
	.col-lg-6 {
		width: 49.2%;
	}
	.col-lg-7 {
		width: 57.8%;
	}
	/* two-thirds */
	.col-lg-8 {
		width: 66.4%;
	}
	/* three-quarters */
	.col-lg-9 {
		width: 74.0%;
	}
	/* five-sixths */
	.col-lg-10 {
		width: 82.2%;
	}
	.col-lg-11 {
		width: 91.0%;
	}
	/* full row */
	.col-lg-12 {
		width: 100%;
	}
 }

